@@ -1,6 +1,8 @@
 2008-05-14  Mark Ellis <mark@mpellis.org.uk>
 
 	* check for alternative media card names
+	* change to above - no longer check names, look for TEMPORARY
+	  attribute on directories in root for attached file systems
 
 2008-04-29  Mark Ellis <mark@mpellis.org.uk>
 
